Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,13 +3,32 @@ trigger:
 
 #CRON à modifier suivant récurrence voulue
 
-schedules:
-- cron: "0 18 1 1 *"
-  displayName: repetition
-  branches:
-    include:
-    - main
-  always: true
+#schedules:
+#- cron: "0 18 1 1 *"
+#  displayName: repetition
+#  branches:
+#    include:
+#    - main
+#  always: true
 
 pool:
   vmImage: ubuntu-latest
+
+# Lien vers service connection :
+
+steps:
+- task: Kubernetes@1
+  inputs:
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'aks-connection'
+    namespace: 'default'
+    command: 'get'
+    arguments: 'deployments'
+  name: "kube"
+
+- task: CmdLine@2
+  inputs:
+    script: |
+      git clone https://github.com/Simplon-AlainCaupin/azure-voting-app-redis
+      ls -lrt
+  name: 'bashscript'
