--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 trigger:
+
 - main
 
 #CRON à modifier suivant récurrence voulue
@@ -33,3 +34,10 @@ steps:
       ls -lrt
       pushd azure-voting-app-redis
       ls -lrt
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'container-connection'
+    repository: 'docker/alaincpn'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
