--- a/app/redisdeploy.yml
+++ b/app/redisdeploy.yml
@@ -3,41 +3,47 @@ kind: Deployment
 metadata:
   name: redis
   labels:
-    app: redistag
+    app: redislb
 spec:
   selector:
     matchLabels:
-      app: redistag
+      app: redislb
   replicas: 1
   template:
     metadata:
       labels:
-        app: redistag
+        app: redislb
     spec:
+      volumes: 
+      - name: vol
+        persistentVolumeClaim:
+          claimName: redisclaim
       containers:
       - name: redis
         image: redis
-        args: ["--requirepass", "$(REDIS_PWD)"]
+        args: ["--requirepass","$(REDIS_PWD)"]
         env:
+        - name: ALLOW_EMPTY_PASSWORD
+          value: "no"
         - name: REDIS_PWD
           valueFrom:
             secretKeyRef:
-              name: redis
-              key: REDIS_PWD
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 250m
-            memory: 256Mi
-        volumeMounts:
-        - name: redis-data
-          mountPath: /data
+              name: redisp
+              key: password
         ports:
         - containerPort: 6379
           name: redis
-      volumes:
-      - name: redis-data
-        persistentVolumeClaim:
-          claimName: redis-pvclaim
+        volumeMounts:
+        - name: vol
+          mountPath: "/data"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: clustredis
+spec:
+  type: ClusterIP
+  ports:
+  - port: 6379
+  selector:
+    app: redislb
